# service/UtenteService.js
@@ -2,29 +2,6 @@
 
 
 /**
- * Elimina l'utente
- * Elimina l'utente con l'id specificato
- *
- * id Long L'id dell'utente
- * returns Risposta
- **/
-exports.eliminaUtente = function(id) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "messaggio" : "Messaggio",
-  "codice" : 0
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
-/**
  * Ottieni l'utente
  * Ottieni l'utente associato alla sessione corrente
  *
